--- a/DirecctX12CG.vcxproj.filters
+++ b/DirecctX12CG.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClCompile Include="Debug.cpp">
       <Filter>ソース ファイル\Engine\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="ModelPS.hlsl">
@@ -378,6 +381,9 @@
     </ClInclude>
     <ClInclude Include="Debug.h">
       <Filter>ヘッダー ファイル\Engine\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
