--- a/IFEngine.vcxproj
+++ b/IFEngine.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="Scene\IScene.h" />
     <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="Scene\Scene2.h" />
+    <ClInclude Include="Scene\Scene3.h" />
     <ClInclude Include="Source\Fire.h" />
   </ItemGroup>
   <ItemGroup>
@@ -256,6 +257,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Scene\Scene2.cpp" />
+    <ClCompile Include="Scene\Scene3.cpp" />
     <ClCompile Include="Source\Fire.cpp" />
   </ItemGroup>
   <ItemGroup>
