--- a/IFEngine.vcxproj.filters
+++ b/IFEngine.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="Scene\Scene2.h">
       <Filter>Header Files\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Scene\Scene3.h">
+      <Filter>Header Files\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\2d\DebugText.cpp">
@@ -345,6 +348,9 @@
       <Filter>Source Files\Engine\Base</Filter>
     </ClCompile>
     <ClCompile Include="Scene\Scene2.cpp">
+      <Filter>Source Files\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\Scene3.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
   </ItemGroup>
