--- a/IFEngine.vcxproj
+++ b/IFEngine.vcxproj
@@ -214,6 +214,7 @@
     <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="Scene\Scene2.h" />
     <ClInclude Include="Scene\Scene3.h" />
+    <ClInclude Include="Scene\Scene4.h" />
     <ClInclude Include="Source\Fire.h" />
   </ItemGroup>
   <ItemGroup>
@@ -258,6 +259,7 @@
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Scene\Scene2.cpp" />
     <ClCompile Include="Scene\Scene3.cpp" />
+    <ClCompile Include="Scene\Scene4.cpp" />
     <ClCompile Include="Source\Fire.cpp" />
   </ItemGroup>
   <ItemGroup>
