--- a/IFEngine.vcxproj
+++ b/IFEngine.vcxproj
@@ -215,6 +215,7 @@
     <ClInclude Include="Scene\Scene2.h" />
     <ClInclude Include="Scene\Scene3.h" />
     <ClInclude Include="Scene\Scene4.h" />
+    <ClInclude Include="Scene\Scene5.h" />
     <ClInclude Include="Source\Fire.h" />
   </ItemGroup>
   <ItemGroup>
@@ -260,6 +261,7 @@
     <ClCompile Include="Scene\Scene2.cpp" />
     <ClCompile Include="Scene\Scene3.cpp" />
     <ClCompile Include="Scene\Scene4.cpp" />
+    <ClCompile Include="Scene\Scene5.cpp" />
     <ClCompile Include="Source\Fire.cpp" />
   </ItemGroup>
   <ItemGroup>
